# coloraide-extras

./: .coveragerc  .dictionary.txt  .gitignore  .pyspelling.yml  404.html  CHANGES.md  LICENSE.md  MANIFEST.in  README.md  hatch_build.py  index.html  mkdocs.yml  playground-config-334b0faf.js  playground-config-336c8062.js  playground-config-33c95a6c.js  playground-config-3af70972.js  playground-config-48e6b4a2.js  playground-config-68525240.js  playground-config-84fbfc0d.js  playground-config-8626880a.js  playground-config-bc6e1114.js  playground-config-cb40c737.js  playground-config-df77bd5f.js  playground-config-e4bad5fe.js  pyproject.toml  setup.py  sitemap.xml  tox.ini  zensical.yml
.github/workflows/: build.yml  deploy.yml  publish.yml
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
coloraide_extras/: __init__.py  __meta__.py  everything.py
coloraide_extras/contrast/: __init__.py  contrast_lstar.py  contrast_michelson.py  contrast_weber.py
coloraide_extras/distance/: __init__.py  delta_e_cam16.py  delta_e_hct.py
coloraide_extras/gamut/: __init__.py  fit_hct_chroma.py
coloraide_extras/interpolate/: __init__.py  spectral.py
coloraide_extras/spaces/: aces.py  cam16_ucs.py  cam16_ucs_jmh.py  cmy.py  cmyk.py  hct.py  hsi.py  hunter_lab.py  igpgtg.py  igtgpg.py  ipt.py  itp.py  orgb.py  prismatic.py  rlab.py  ucs.py  uvw.py  xyy.py
colors/: index.html
colors/cam16_ucs/: index.html
colors/cam16_ucs_jmh/: index.html
colors/hct/: index.html
colors/ucs/: index.html
colors/uvw/: index.html
contrast/: index.html
contrast/lstar/: index.html
contrast/michelson/: index.html
contrast/weber/: index.html
distance/: index.html
distance/cam16/: index.html
distance/hct/: index.html
docs/src/dictionary/: en-custom.txt
docs/src/markdown/: contrast.md  (+3 more)
docs/theme/: playground-config-08696bfd.js  playground-config-0b8399c4.js  playground-config-0ba7e885.js  playground-config-0e1b5328.js  playground-config-1dc389a6.js  playground-config-23e7f56c.js  playground-config-384ede00.js  playground-config-3e927c79.js  playground-config-3f008a1e.js  playground-config-42c17ad5.js  playground-config-46308ab1.js  playground-config-472b684a.js  playground-config-4e896852.js  playground-config-5ad13f66.js  playground-config-5e98c4b6.js  playground-config-605dd019.js  playground-config-6114aa9c.js  playground-config-6119f839.js  playground-config-66447181.js  playground-config-696e87c6.js  playground-config-6b95b8b7.js  playground-config-85e5093e.js  playground-config-8a6d1bf2.js  playground-config-954024d3.js  playground-config-ac7e17c6.js  playground-config-ca43cbaa.js  playground-config-cf857e5a.js  playground-config-d006f77d.js  playground-config-d832c658.js  playground-config-e243e34a.js  playground-config-ea54609d.js  playground-config-ef165c82.js  playground-config-f0823851.js  playground-config-f5e8667f.js
gamut/: index.html
gamut/hct_chroma/: index.html
interpolate/: index.html
interpolate/spectral/: index.html
playground/: coloraide-0.16.0-py3-none-any.whl  coloraide_extras-0.4.0-py3-none-any.whl  coloraide_extras-0.5.1-py3-none-any.whl  coloraide_extras-1.0-py3-none-any.whl  coloraide_extras-1.0.1.post1-py3-none-any.whl  coloraide_extras-1.0.post1-py3-none-any.whl  coloraide_extras-1.0b1-py3-none-any.whl  coloraide_extras-1.0rc1-py3-none-any.whl  coloraide_extras-1.1-py3-none-any.whl  coloraide_extras-1.10-py3-none-any.whl  coloraide_extras-1.10.1-py3-none-any.whl  coloraide_extras-1.11-py3-none-any.whl  coloraide_extras-1.12-py3-none-any.whl  coloraide_extras-1.12.1-py3-none-any.whl  coloraide_extras-1.2-py3-none-any.whl  coloraide_extras-1.3-py3-none-any.whl  coloraide_extras-1.4-py3-none-any.whl  coloraide_extras-1.4.1-py3-none-any.whl  coloraide_extras-1.5-py3-none-any.whl  coloraide_extras-1.6-py3-none-any.whl  coloraide_extras-1.7-py3-none-any.whl  coloraide_extras-1.8-py3-none-any.whl  coloraide_extras-1.9-py3-none-any.whl  coloraide_extras-1.9.1-py3-none-any.whl  coloraide_extras-1.9.2-py3-none-any.whl  coloraide_extras-1.9.3-py3-none-any.whl  index.html  pymdown_extensions-10.11.2-py3-none-any.whl  pymdown_extensions-10.16.1-py3-none-any.whl
requirements/: docs.txt  project.txt  test.txt
search/: search_index.json
tests/: test_cam16.py  test_cam16_ucs_jmh.py  test_cmy.py  test_cmyk.py  test_contrast.py  test_distance.py  test_gamut.py  test_hct.py  test_hsi.py  test_hunter_lab.py  test_igpgtg.py  test_interpolate.py  test_ipt.py  test_orgb.py  test_prismatic.py  test_rlab.py  test_roundtrip.py  test_ucs.py  test_uvw.py  test_xyy.py  util.py
tools/: build_wheel.py  buildwheel.py  calc_cam16_ucs_jmh_min_m.py  calc_hct_min_chroma.py  calc_igpgtg_matrices.py  calc_igtgpg_matrices.py  calc_ipt_matrices.py  calc_itp_matrices.py  calc_reflect.py  calc_rlab_matrices.py  calc_xyz_transforms.py  plot_reflect.py
(+21 files in other folders)
